// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHeader should render 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 theme-dark bg-theme-background text-theme-text"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ hQTESw -mr-1 border-theme-neutral-light"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-light"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1mhg460-0 duLDxE"
            data-testid="Avatar"
          />
        </div>
        <h2
          class="mb-0 text-theme-neutral-900"
          data-testid="WalletHeader__name"
        />
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star-outline.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm eixJcU"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <button
          class="sc-AxjAm gSuvFI"
          color="primary"
          data-testid="WalletHeader__more-button"
          type="button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhCb crfxJX"
              data-testid="WalletHeader__toggle"
              disabled=""
              type="checkbox"
            />
            <div
              class="sc-AxhUy gvyvto"
            >
              <span
                class="sc-AxgMl gXZfaE"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            abc
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
      <li
        class="pl-8 space-y-2"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-dark"
        >
          Balance
        </p>
        <p
          class="text-lg font-medium"
          data-testid="WalletHeader__balance"
        >
          0
        </p>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show modifiers 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 theme-dark bg-theme-background text-theme-text"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ hQTESw -mr-1 border-theme-neutral-light"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-light"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1mhg460-0 duLDxE"
            data-testid="Avatar"
          />
        </div>
        <h2
          class="mb-0 text-theme-neutral-900"
          data-testid="WalletHeader__name"
        />
        <span
          data-testid="WalletHeader__ledger"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-light"
            height="1em"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </span>
        <span
          data-testid="WalletHeader__multisig"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-light"
            height="1em"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm eixJcU"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <button
          class="sc-AxjAm gSuvFI"
          color="primary"
          data-testid="WalletHeader__more-button"
          type="button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhCb crfxJX"
              data-testid="WalletHeader__toggle"
              disabled=""
              type="checkbox"
            />
            <div
              class="sc-AxhUy gvyvto"
            >
              <span
                class="sc-AxgMl gXZfaE"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            abc
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
      <li
        class="pl-8 space-y-2"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-dark"
        >
          Balance
        </p>
        <p
          class="text-lg font-medium"
          data-testid="WalletHeader__balance"
        >
          0
        </p>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show publicKey 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 theme-dark bg-theme-background text-theme-text"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ hQTESw -mr-1 border-theme-neutral-light"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-light"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1mhg460-0 duLDxE"
            data-testid="Avatar"
          />
        </div>
        <h2
          class="mb-0 text-theme-neutral-900"
          data-testid="WalletHeader__name"
        />
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star-outline.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm eixJcU"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <button
          class="sc-AxjAm gSuvFI"
          color="primary"
          data-testid="WalletHeader__more-button"
          type="button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhCb crfxJX"
              data-testid="WalletHeader__toggle"
              type="checkbox"
            />
            <div
              class="sc-AxhUy gvyvto"
            >
              <span
                class="sc-AxgMl gXZfaE"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            123
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;
